Version updates
 - Updated dependency versions to the latest available version.
 - Added support for building and running Jaqumal on Java 8.